--- a/luigi/templates/header.html
+++ b/luigi/templates/header.html
@@ -1,3 +1,4 @@
 <!doctype html>
-<title>Luigi Rules!</title>
-<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+<title>Luigi Task History</title>
+<link href="/static/visualiser/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<script src="/static/visualiser/lib/bootstrap/js/bootstrap.min.js"></script>
